# tdaclient

./: .flake8  .gitignore  .pre-commit-config.yaml  .tool-versions  README.md  mypy.ini  pyproject.toml
.circleci/: config.yml
scripts/: gen.sh
tdaclient/: __main__.py  client.py
tdaclient/schema/: __init__.py  authorization.py  common.py  common_quotes.py  get_account_request.py  get_account_response.py  get_order_by_path_response.py  get_order_response.py  get_price_history_response.py  get_quote_request.py  get_quote_response.py  get_quotes_request.py  get_quotes_response.py  market_hours_request.py  market_hours_response.py  option_chain_request.py  option_chain_response.py  option_chains_response.py  post_access_token_request.py  post_access_token_response.py  post_accss_token_response.py  user_principal_request.py  user_principal_response.py
tdaclient/schema/json/: authorization.json  common.json  common_quotes.json  get_account_request.json  get_account_response.json  get_order_by_path_response.json  get_order_response.json  get_price_history_response.json  get_quote_request.json  get_quote_response.json  get_quotes_request.json  get_quotes_response.json  market_hours_request.json  market_hours_response.json  option_chain_request.json  option_chain_response.json  option_chains_response.json  post_access_token_request.json  post_access_token_response.json  user_principal_request.json  user_principal_response.json
tdaclient/td/: oauth_request.py  tdclient.py
test/: test_tdclient.py
test/tdaclient/schema/: test_get_account_response.py  (+10 more)
(+9 files in other folders)
