[tool.poetry]
name = "tdaclient"
version = "0.1.0"
description = ""
authors = ["Matthew Tondreau <mmtondreau@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"
pandas = "^1.5.2"
requests = "^2.28.1"
boto3 = "^1.26.36"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-mock = "^3.10.0"
coverage = "^6.5.0"
flake8 = "^6.0.0"
pre-commit = "^2.20.0"
mypy = "^0.991"
black = "^22.12.0"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.28.11.6"
datamodel-code-generator = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [".*", "tests", "dist"]

[tool.coverage.report]
branch = true
fail_under = 80
